# aura-ai

./: .env.template  .gitignore  README.md  cleanup_checkpoints.py  cleanup_checkpoints_simple.py  database.db  fix_checkpoints_table.sql  fix_database_schema.py  install-deps.sh  main.py  migrate_agent_state_schema.py  migrate_schema.py  pyproject.toml  railway.toml  remove_checkpoints_table.py  remove_checkpoints_table.sql  requirements.txt  try-nanobana-pro.py  try-nanobanana-pro.py  uv.lock.backup  verify_db.py  verify_graph.py
api_models/: __init__.py  chat.py  user.py
app/: .gitignore  README.md  config.py  database.py  db-query.txt  graph.py  pyproject.toml  schema.py  state.py  verify_db.py  verify_graph.py
app/agents/: clarification.py  context.py  fulfillment.py  ranking.py  research.py  styling.py
app/app/: database.py  graph.py
app/app/agents/: context.py
app/app/tools/: extraction.py  intent.py
app/config/: README.md  __init__.py  beauty_standard.py
app/dao/: agent_state_dao.py  chat_query_dao.py  product_embedding_dao.py  user_chat_dao.py  user_dao.py
app/services/: __init__.py  llm_service.py  s3_service.py  user_embedding_service.py  user_service.py
app/tools/: beauty_standard.py  embedding.py  extraction.py  filtering.py  google_shopping.py  image_merging.py  intent.py
app/utils/: __init__.py  agent_state_sync.py  similarity.py
